--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <!-- Title & Favicon -->
         <title>Astrid</title>
-        <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/x-icon" />
-        <link rel="icon" href="android-chrome-192x192.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="/public/favicon-16x16.png" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" type="image/x-icon" />
+        <link rel="icon" href="/public/android-chrome-192x192.png" type="image/x-icon" />
 
         <!-- HTML5Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file://-->
