--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
         <script src="https://unpkg.com/feather-icons"></script>
 
         <!-- Stylesheets -->
@@ -35,52 +36,58 @@
     </head>
 
     <body id="page-top" data-bs-spy="scroll">
-        <nav class="navbar navbar-expand-lg navbar-default">
-            <div class="container">
-                <a href="#" class="navbar-brand">
-                    <img src="/public/img/logo/astrid.svg" class="navbar-brand-img" alt="Astrid">
-                </a>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-default">
+                <div class="container">
+                    <a href="#" class="navbar-brand">
+                        <img src="/public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
+                    </a>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="nav navbar-nav ms-auto">
-                        <li class="nav-item"><a href="" class="nav-link">Features</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">How it Works</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Company</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
-                    </ul>
+                    <div class="d-none d-lg-flex navbar-menu w-100 align-items-center">
+                        <ul class="nav navbar-nav ms-auto">
+                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Features</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link nav-hover">How it Works</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link nav-hover">The Team</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Reviews</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Blog</a></li>
+                        </ul>
 
-                    <ul class="nav navbar-nav ms-auto d-flex align-items-center">
-                        <li class="nav-item after">
-                            <a href="#" class="nav-link d-flex"><i data-feather="globe" class="me-1"></i>ENG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link d-flex align-items-center"><button class="btn btn-primary">Get Started</button></a>
-                        </li>
-                    </ul>
+                        <ul class="nav navbar-nav ms-auto d-flex align-items-center">
+                            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link"><button class="btn btn-primary btn-padded">Get Started</button></a></li>
+                        </ul>
+                    </div>
+
+                    <div class="d-flex d-lg-none text-end align-items-center">
+                        <div class="nav-item me-3"><a href="#" class="nav-link fw-500">Contact</a></div>
+                        <div class="nav-item me-1"><a href="#" class="nav-link"><button class="btn btn-primary btn-padded">Get Started</button></a></div>
+
+                        <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav">
+                            <i class="bi bi-text-indent-left fs-32"></i>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <header class="site-header">
-            <div class="container vh-75 d-flex align-items-center justify-content-center">
-                <div class="jumbotron text-center col-md-8">
-                    <div class="row">
-                        <div class="position-relative mb-5">
-                            <h1 class="heading-1 fw-700 text-oxford">Make impactful funnels that convert</h1>
+            <div class="offcanvas offcanvas-end" id="navbarNav" tabindex="-1" aria-labelledby="navbarNavLabel">
+                <div class="offcanvas-header border-bottom">
+                    <a href="#" class="navbar-brand">
+                        <img src="/public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
+                    </a>
 
-                            <img src="/public/img/underline.svg" alt="" class="position-absolute" style="bottom: -15px; transform: translateX(-50%)">
-                        </div>
-                        
+                    <button class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
 
-                        <p class="text-1">
-                            We’ve helped hundreds of businesses and startups make impactful
-                            and converting online content for their unique businesses and products.
-                        </p>
-                    </div>
-
-                    <div class="row m-auto">
-
-                    </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-0">
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">Features</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">How it Works</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">The Team</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">Reviews</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">Blog</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">Contact</a></li>
+                        <li class="nav-item border-bottom"><a href="#" class="nav-link">Get Started</a></li>
+                    </ul>
                 </div>
             </div>
         </header>
