Assets rendering fix

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-        <link rel="stylesheet" href="/public/css/styles.css" />
+        <link rel="stylesheet" href="/Astrid/public/css/styles.css" />
 
         <!-- Title & Favicon -->
         <title>Astrid</title>
-        <link rel="shortcut icon" href="/public/favicon-16x16.png" type="image/x-icon" />
-        <link rel="apple-touch-icon" href="/public/apple-touch-icon.png" type="image/x-icon" />
-        <link rel="icon" href="/public/android-chrome-192x192.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="/Astrid/public/favicon-16x16.png" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="/Astrid/public/apple-touch-icon.png" type="image/x-icon" />
+        <link rel="icon" href="./public/android-chrome-192x192.png" type="image/x-icon" />
 
         <!-- HTML5Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file://-->
@@ -40,7 +40,7 @@
             <nav class="navbar navbar-expand-lg navbar-default">
                 <div class="container">
                     <a href="#" class="navbar-brand">
-                        <img src="/public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
+                        <img src="./public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
                     </a>
 
                     <div class="d-none d-lg-flex navbar-menu w-100 align-items-center">
@@ -72,7 +72,7 @@
             <div class="offcanvas offcanvas-end" id="navbarNav" tabindex="-1" aria-labelledby="navbarNavLabel">
                 <div class="offcanvas-header border-bottom">
                     <a href="#" class="navbar-brand">
-                        <img src="/public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
+                        <img src="./public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
                     </a>
 
                     <button class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
