--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-        <link rel="stylesheet" href="/Astrid/public/css/styles.css" />
+        <link rel="stylesheet" href="./public/css/styles.css" />
 
         <!-- Title & Favicon -->
         <title>Astrid</title>
-        <link rel="shortcut icon" href="/Astrid/public/favicon-16x16.png" type="image/x-icon" />
-        <link rel="apple-touch-icon" href="/Astrid/public/apple-touch-icon.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="./public/favicon-16x16.png" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" type="image/x-icon" />
         <link rel="icon" href="./public/android-chrome-192x192.png" type="image/x-icon" />
 
         <!-- HTML5Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,33 +36,33 @@
     </head>
 
     <body id="page-top" data-bs-spy="scroll">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-default">
+        <header class="site-header">
+            <nav class="navbar navbar-expand-lg navbar-default animate__animated">
                 <div class="container">
-                    <a href="#" class="navbar-brand">
+                    <a href="#page-top" class="navbar-brand">
                         <img src="./public/img/logo/astrid.svg" alt="Astrid" class="navbar-brand-img">
                     </a>
 
                     <div class="d-none d-lg-flex navbar-menu w-100 align-items-center">
                         <ul class="nav navbar-nav ms-auto">
-                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Features</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link nav-hover">How it Works</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link nav-hover">The Team</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Reviews</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link nav-hover">Blog</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">How it Works</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">The Team</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Reviews</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav ms-auto d-flex align-items-center">
                             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link"><button class="btn btn-primary btn-padded">Get Started</button></a></li>
+                            <li class="nav-item"><a href="#" class="nav-link"><button class="btn btn-primary">Get Started</button></a></li>
                         </ul>
                     </div>
 
-                    <div class="d-flex d-lg-none text-end align-items-center">
+                    <div class="d-flex d-lg-none text-end align-items-center navbar-mobile">
                         <div class="nav-item me-3"><a href="#" class="nav-link fw-500">Contact</a></div>
                         <div class="nav-item me-1"><a href="#" class="nav-link"><button class="btn btn-primary btn-padded">Get Started</button></a></div>
 
-                        <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav">
+                        <button type="button" class="navbar-toggler pe-0" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav">
                             <i class="bi bi-text-indent-left fs-32"></i>
                         </button>
                     </div>
@@ -91,6 +91,213 @@
                 </div>
             </div>
         </header>
+
+        <main class="content">
+            <section class="header mb-5" >
+                <div class="container">
+                    <div class="jumbotron d-flex justify-content-center py-5 mb-5" data-aos="fade-up">
+                        <div class="col-md-7 col-sm-12 col-xs-12 text-center">
+                            <h1 class="heading-2 fw-700 text-oxford mb-3">Make impactful funnels that convert</h1>
+                            <p class="text-2 fw-500 text-gray-600 mb-4 col-md-7 col-sm-12 col-xs-12 m-auto">
+                                We’ve helped over 25,000 individuals and companies to grow their business successfully.
+                            </p>
+
+                            <div class="d-flex col-md-6 m-auto justify-content-around">
+                                <a href="#" class="link"><button class="btn btn-primary btn-padded" style="width: 150px">Start Free Trial</button></a>
+                                <a href="#" class="link"><button class="btn btn-dark btn-padded" style="width: 150px">Learn More</button></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row d-flex justify-content-center text-center" data-aos="fade-down">
+                        <small class="fs-14 fw-400 ff-outfit text-gray-400">Trusted by many companies.</small>
+                        <div class="col-md-7 d-flex justify-content-around">
+                            <img class="sample-logo" src="./public/img/assets/logos/geeks.svg" alt="">
+                            <img class="sample-logo" src="./public/img/assets/logos/freshcart.svg" alt="">
+                            <img class="sample-logo" src="./public/img/assets/logos/oduo.svg" alt="">
+                            <img class="sample-logo" src="./public/img/assets/logos/booking.svg" alt="">
+                            <img class="sample-logo" src="./public/img/assets/logos/meeko.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="row section-heading text-center mb-5" data-aos="fade-down">
+                        <h2 class="heading-3 fw-700 text-oxford mb-3">All the tools you need</h2>
+                        <p class="text-3 fw-500 text-gray-600 col-md-4 col-sm-12 m-auto">
+                            These companies release their own versions of the operating systems with minor changes, and yet always.
+                        </p>
+                    </div>
+
+                    <div class="row d-flex justify-content-between flex-wrap" data-aos="fade-up">
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="layout" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Funnel Editor</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="bar-chart-2" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Analytics</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="radio" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">AI Suggestions</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="headphones" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Live Support</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="mail" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Manage Forms</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="at-sign" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Free Emails</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="calendar" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Schedule</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="check-circle" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Message Bot</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-4">
+                            <div class="card p-4 bg-light border-0">
+                                <div class="card-body">
+                                    <div class="icon mb-3 bg-white d-flex align-items-center justify-content-center" style="height: 65px; width: 65px; border-radius: 100%">
+                                        <i data-feather="send" class="is-28 text-primary"></i>
+                                    </div>
+                                    <h5 class="mb-3 fs-21 fw-600 text-oxford">Templates</h5>
+
+                                    <p class="mb-3 text-gray-600 fs-16 fw-300 lh-21">
+                                        Our built in editor makes creating and tracking your funnels super easy.
+                                    </p>
+
+                                    <a href="#" class="link text-primary fw-500 ff-outfit d-flex align-items-end">
+                                        Learn More<i data-feather="chevrons-right" class="is-18 ms-1"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <!-- jQuery -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
