Fixed JS file linking

--- a/index.html
+++ b/index.html
@@ -315,6 +315,6 @@
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
         <!-- Main -->
-        <script src="/public/js/main.js" type="module"></script>
+        <script src="./public/js/main.js" type="module"></script>
     </body>
 </html>
