--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </p>
                     </div>
 
-                    <div class="row d-flex justify-content-between flex-wrap" data-aos="fade-up">
+                    <div class="row d-flex justify-content-between flex-wrap mb-4" data-aos="fade-up">
                         <div class="col-md-4 mb-4">
                             <div class="card p-4 bg-light border-0">
                                 <div class="card-body">
@@ -295,7 +295,21 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row d-flex flex-column justify-content-end align-items-center" data-aos="flip-up">
+                        <div class="col-md-2 p-0">
+                            <a href="#" class="link">
+                                <button class="btn btn-primary btn-padded">
+                                    <i class="bi bi-play-circle me-1"></i> See Astrid in Action
+                                </button>
+                            </a>
+                        </div>
+                    </div>
                 </div>
+            </section>
+
+            <section>
+                <div class="container"></div>
             </section>
         </main>
 
