--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                         </div>
                     </div>
 
-                    <div class="row d-flex justify-content-center text-center" data-aos="fade-down">
+                    <div class="row d-flex justify-content-center text-center flex-wrap" data-aos="fade-down">
                         <small class="fs-14 fw-400 ff-outfit text-gray-400">Trusted by many companies.</small>
-                        <div class="col-md-7 d-flex justify-content-around">
+                        <div class="col-md-7 col-xs-12 flex-wrap d-flex justify-content-around">
                             <img class="sample-logo" src="./public/img/assets/logos/geeks.svg" alt="">
                             <img class="sample-logo" src="./public/img/assets/logos/freshcart.svg" alt="">
                             <img class="sample-logo" src="./public/img/assets/logos/oduo.svg" alt="">
@@ -296,8 +296,8 @@
                         </div>
                     </div>
 
-                    <div class="row d-flex flex-column justify-content-end align-items-center" data-aos="flip-up">
-                        <div class="col-md-2 p-0">
+                    <div class="row d-flex flex-column justify-content-center align-items-center" data-aos="flip-up">
+                        <div class="col-md-2 col=sm-12 col-xs-12 p-0 text-center d-flex justify-content-center">
                             <a href="#" class="link">
                                 <button class="btn btn-primary btn-padded">
                                     <i class="bi bi-play-circle me-1"></i> See Astrid in Action
